<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/my_images_group" android:enabled="false">
    <item

        android:id="@+id/action_delete_my_image"
        android:icon="@drawable/menu_delete_bg"
        android:title="@string/delete"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_share_my_image"
        android:icon="@drawable/menu_share_bg"
        android:title="@string/action_share"
        app:showAsAction="always"/>
    </group>
    <group android:id="@+id/my_images_select_all_group" >
        <item
            android:id="@+id/action_select_all_my_images"
            android:title="@string/select_all"
            app:showAsAction="always"/>
    </group>

    <group android:id="@+id/my_images_clear_all_group" android:enabled="false">
        <item
            android:id="@+id/action_clear_all_my_images"
            android:title="@string/clear"
            app:showAsAction="always"/>
    </group>



</menu>
